--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "type-check": "vue-tsc --noEmit"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.76.1",
         "@vueuse/core": "^10.7.0",
         "axios": "^1.6.0",
         "markdown-it": "^14.1.0",
