--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && npx vite build --config vite.config.prod.ts"
+  command = "npm install && npm run build"
   publish = "dist"
 
 [build.environment]
